--- a/_config.yml
+++ b/_config.yml
@@ -70,10 +70,10 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-acm_id: 99659739973 # your dl.acm.org/profile/id
+acm_id: # 99659739973 # your dl.acm.org/profile/id
 blogger_url: # your blogger URL
 bluesky_url: # your bluesky URL
-dblp_url: https://dblp.org/pid/201/1413.html # your DBLP profile url
+dblp_url: # https://dblp.org/pid/201/1413.html # your DBLP profile url
 discord_id: # your discord id (18-digit unique numerical identifier)
 facebook_id: # your facebook id
 flickr_id: # your flickr id
@@ -83,7 +83,7 @@ ieee_id: # your ieeexplore.ieee.org/author/id
 inspirehep_id: # Inspire HEP author ID
 instagram_id: # your instagram id
 kaggle_id: # your kaggle id
-keybase_username: mebasar # your keybase user name
+keybase_username: # mebasar # your keybase user name
 lastfm_id: # your lastfm id
 lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 linkedin_username: mebasar # your LinkedIn user name
@@ -94,10 +94,10 @@ osf_id: # your OSF ID
 pinterest_id: # your pinterest id
 publons_id: # your ID on Publons
 quora_username: # your Quora username
-research_gate_profile: Erkan-Basar-2 # your profile on ResearchGate
+research_gate_profile: # Erkan-Basar-2 # your profile on ResearchGate
 scholar_userid: Duce18kAAAAJ # your Google Scholar ID
 scopus_id: # your profile on Scopus
-semanticscholar_id: 150980784 # your Semantic Scholar ID
+semanticscholar_id: # 150980784 # your Semantic Scholar ID
 spotify_id: # your spotify id
 stackoverflow_id: # your stackoverflow id
 telegram_username: # your Telegram user name
@@ -112,7 +112,7 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  You can reach me via Email.
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
