--- a/_config.yml
+++ b/_config.yml
@@ -132,8 +132,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: Erkan Basar # blog_name will be displayed in your blog page
-blog_description:
+blog_name: News # blog_name will be displayed in your blog page
+blog_description: Latest highlights and key moments.
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
