--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
 contact_note: >
-  You can reach me via Email.
+  Feel free to reach me via email at erkan[at]basar.dev
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
