--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,97 +1,56 @@
 - title: General Information
   type: map
   contents:
-    - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+    - name: Name
+      value: Erkan Basar
+    - name: Email
+      value: erkan@basar.dev
+    - name: About
+      value: I am a computer scientist specializing in AI and machine learning, with a focus on language technologies. My work is aimed at advancing research in AI and its practical applications. I enjoy working in multidisciplinary environments, collaborating with experts across various domains to bring innovative and effective solutions to complex challenges.
     - name: Languages
-      value: English, German
+      value: English (Advanced), Dutch (Intermediate, B1 Certificate), Turkish (Native)
+
+- title: Experience
+  type: time_table
+  contents:
+    - title: PhD Candidate
+      institution:  Radboud University, Nijmegen, The Netherlands
+      year: 2020-2025
+      description:
+        - Multidisciplinary research on controlled usage of large language models for utterance generation and dialogue management in health-promoting conversational agen
+        - Project website https://look.uvt.nl
+    - title: Computational Linguist
+      institution: FloodTags, The Hague, The Netherlands
+      year: 2016-2022
+      description:
+        - Developed an end-to-end information processing pipeline using the state-of-the-art artificial intelligence methods and tools. The system was actively used by the Red Cross and the World Bank.
+
+    - title: Guest Researcher
+      institution: Radboud University, Nijmegen, The Netherlands
+      year: 2018-219
+      description:
+        - Research focused on information extraction from unstructured text for low resource languages
+
+    - title: Scientific Software Developer
+      institution: Radboud University, Nijmegen, The Netherlands
+      year: 2015-2016
+      description:
+        - Developments of web interfaces and RESTful APIs for several text mining research projects.
+
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      institution: Radboud University, Nijmegen, The Netherlands
+      year: 2020-2025
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Conversational Agents, Artificial Intelligence
+    - title: Artificial Intelligence, M.Sc.
+      institution: Radboud University, Nijmegen, The Netherlands
+      year: 2015-2017
       description:
-        - Description 1.
-        - Description 2.
-
-- title: Experience
-  type: time_table
-  contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
-      items:
-        - Max Planck Medal
-
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
-
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+        - Radboud Scholarship Programme Recipient
+    - title: Computer Engineering, B.Sc.
+      institution: Muğla Sıtkı Koçman University, Muğla, Turkey
+      year: 2011-2015
