--- a/_config.yml
+++ b/_config.yml
@@ -634,15 +634,15 @@ jekyll_get_json:
   - data: resume
     json: assets/json/resume.json # it can also be an url
 jsonresume:
-  - basics
-  - work
+  - info
+  - experience
   - education
   - publications
   - projects
-  - volunteer
+  - reviewing
+  - organization
   - awards
   - certificates
   - skills
   - languages
   - interests
-  - references
